Added modal and functionality to add new cards, and preserve info in localStorage

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,12 @@
   pointer-events: none;
 }
 
+.cards-row {
+  .col {
+    min-width: 33%;
+  }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
